--- a/rmclient/package.json
+++ b/rmclient/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.2",
+    "react-native-countdown-component": "^2.6.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-image-picker": "^1.1.0",
     "react-native-modal": "^11.4.0",
